--- a/java/笔记.md
+++ b/java/笔记.md
@@ -88,15 +88,167 @@
 ## 第四章 面向对象程序设计
 - 构造方法不能从父类继承，构造函数应该为所有成员变量赋初值**构造方法的正常用途是初始化对象实例，默认的无参构造方法会把所有未初始化的成员变量设为默认值**；继承关系中只能在子类的构造函数中的第一行调用父类的构造函数，用super(参数).
 - 实例方法可以相互调用，因为在同一个类中。实例方法不能调用静态方法，静态方法可以嗲用实例方法。
-- java程序嗲用方法，参数传送采用的是值传送<font color="blue">值传递和引用传递(其实还是值传递只是把实际参数（一个引用）拷贝一份赋值给形式参数，形式参数进行操作)</font>
+- java程序调用方法，参数传送采用的是值传送<font color="blue">值传递和引用传递(其实还是值传递只是把实际参数（一个引用）拷贝一份赋值给形式参数，形式参数进行操作)</font>
 
-#### 简单题
+#### 简答题
 	1.类定义，类特性，类要素：
 		a. 类的定义也称为类的声明，class关键字修饰表明其后定义的是一个类
 		b. 类的特性：多态，封装，继承。
 		c. 类中包含两部分元素：成员变量和成员方法。
+
 	2.类和对象的区别：
 		类是实体在计算机中的反映，对象是具有类类型的变量，类是对象的抽象，而对象是类的具体实例。
+
 	3.static关键字什么意思和作用
 		1. 意思：是将几个对象中相同的成员单独提取后，放在类里声明静态的产物
 		2. 被static修饰的变量、被static修饰的方法统一属于类的静态资源，是类实例之间共享的。
+		
+	4.静态方法和静态变量：
+		由static关键字标记，无需创建对象实例的时候就可以引用的方法和变量，是独立存在的只是位置放在类下。
+
+	5.静态变量与实例变量：
+		1. 静态变量：存储在静态存储区，程序一启动就存在，static关键字修饰。
+		2. 实例变量：存储在堆中，需先初始化这个类才可以调用。
+		
+	6.new完成那些功能：new操作符对对象类型实例化。调用构造函数（new的时候向构造函数传值)；给对象分配空间。
+
+	7. 什么是null引用：null引用是null类型表达式唯一可能的值，null引用可以转换为任意引用类型。
+## 第五章 数组和字符串 trim()去除前后空格
+- Sttring类不可被继承，因为有final修饰
+
+- 创建数组和数组静态初始化：
+	1. 申明数组：int inA[]; double[] int;
+	2. 静态初始化：int[] a={1,2}
+- 动态初始化：
+	1. `String names[] = new String[2];names[1] = "t";`
+- 多维数组申明:
+	int t[][]; double[][] a	;int[] a[];int a[][]={{1,2},{2,3}};<br>
+	int a[][] =new int[2][];(只申明第一个)；<br>
+	a[1]=new int[4];<br>
+	a[1][3]=3;（string也一样）
+
+- 空字符串：String s1 = new String();
+
+```
+	string str1 = "";    //空字符串,分配了内存分配了一个空间
+	string str2 = null; //NULL	null：未分配内存
+```
+
+- String是不可变字符串，StringBuffer是可变字符串.Vector是变长字符串()，其中有构造方法
+Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容量增量)的空向量vector
+	1. 方法1：addElement(Object obj)将元素添加到序列尾部。
+	2. add(int index，Object obj)在指定位置插入指定元素。
+	3. 修改某位置处的元素 setElementAt(Object obj,int index);
+	4. removeElement(Object obj)删除第一个与指定元素相同的值，返回的是布尔型表示成功与否。
+	5. removeElementAt(int index)
+#### 填空简答题 
+	1. 运算符==判断的是：两个对象在内存的存储空间是否相同。
+	2. 数组静态化：在数组声明的时候赋初始值。
+	3. 数组的下标可以是整型常量和表达式。
+	4. int[] arr 存在于堆内存，new int[3] 存在于栈内存。new 出来的对象都有一个唯一的地址值，相当于把堆内存的地址值赋值给栈内存的的数组。
+
+## 第六章 继承与多态
+- 继承了父类的成员变量。
+- equals判断对象的时候是，使用的是从object继承来的equals方法是==，其中string覆盖的equals判断的是值相同。
+- 派生类可以使用基类的除私有方法和变量外所有(继承所有不能选择性的继承)。
+- 对象转型：将子类的对象赋给父类变量。
+
+		判断引用指向那个对象 instanceof.如果判定父类引用指向子类实例。
+		A(父类) a =new B();
+		if(a instanceof B){
+			B b=(B)a;a.类属性//就可以使用基类的属性了。
+		}
+		
+		
+- **覆盖与多态**
+	1. 通过方法覆盖(只有继承)可以达到语言多态性目的。<font color="red">同名同参是覆盖，但是访问权限不能更严格___同名不同参叫重载(属于同一个类)</font>
+
+- 终极方法也就是final修饰的不能被覆盖。<font color="green">终极变量是final修饰，常量是 static final</font>终极类不能被继承:保证一个方法指向String类的引用，是一个真正的String类型(比如string类)
+- **抽象类**：抽象类中有任何成员方法，(包括构造方法，抽象方法[只是方法的申明没有实现])，不能在非抽象类中定义抽象方法。<font color="blue">接口就是全部是抽象方法和常量（就是终极静态变量）</font> <font color="red">抽象类不能创建对象，只能继承或者对象转型来使用</font>
+- **接口实现**：implements关键字。
+
+		普通类不能有抽象方法，实现类必须要完整的重写抽象类所有的方法。
+		实现类！部分不重写的话子类只能也是抽象类。。直至。。。。所有抽象方法被全部重写为止。
+		
+		接口不能实现接口可以继承，抽象类可以继承接口。
+		
+		java接口常量，抽象方法，构造方法(书上)
+#### 简答题
+ 1. 类A继承扩展B，子类a和父类b的关系是 is a关系
+ 2. 使用关键字final的类都是不能被扩展的类
+ 3. 接口所有变量的属性为public
+ 4. 什么是多态：定义的引用变量，所指向的具体类型和 通过该引用变量发出的方法调用在编程时并不确定。重载一个方法名可以看作多态，由对象确定调用父类或者子类的那个方法。
+
+## 第七章 输入和输出流
+- <font color="blue">基本字节数据流：文件数据流 ，过滤器数据流 ；基本字符流： 读者和写者</font>，File类不属于流，用于处理文件
+- 数据流指一组有顺序的，有起点和终点的字节集合。
+- io包提供了4个基本抽象类：<font color="red">InputStream , OutputStream ,Reader ,	Writer</font>
+- 输入数据流：
+	1. int available()返回数据流中可读取的字节数(实际可能大于返回值).
+	2. int read()输入流读取一个字节的二进制数据。
+	3. int read(byte[] b , int off,int len)从输入流中读取长度为len的数据从数组小标为off处放置
+- 输出字节流：
+	1. void flush();刷新并强制写出所有缓冲的输出字节
+	2. void write(int i)将字节i写入数据流
+
+#### 文件数据流
+- FileInputStream文件读取 FileOutputStream文件输出
+
+		FileInputStream in =new FileInputStream("路径")
+		while(in.available > 0)
+		System.out.print( in.read() +"");
+		in.close();
+#### 过滤器数据流
+- 缓冲区数据流：BufferedInputStream 和 BufferedOutputStream 都属于过滤器数据流。
+		
+- 数据数据流：DataInputStream 和 DataOutputStream 允许读写 Java基本类型（按类型读写）
+	1. double readDouble()
+	2. char readChar()
+	3. String readUTF()
+	4. boolean readBoolean()
+	
+	a.void wirteBoolean(boolean aBool)
+
+- 对象流：
+	1.void wirteObject();
+	2.Object readObject();需要向所要的对象强制转换。
+
+		同一套路：
+		举例将对象信息写入文件；向文件写对象流创建
+		FileOutputStram f = new FileOutputStream("路径");
+		ObjectOutputStream s = new ObjectOutputStream(f);
+#### 读者和写者  
+- InputStreamReader 和 OutputStreamWriter 类，通过这个实现不同平台之间数据流的数据进行转换。
+	1. InputStreamReader(InputStream in)默认规范
+	2. InputStreamReader(InputStream in,string enc)指定规范enc
+- FileReader 和 FileWriter 是文件字符读者 和 写者。
+	1. wirte(String);将一个字符串写入文件
+#### 缓冲区读者和缓冲区写者
+- BufferedReader()
+	1. String readLine();读一行 
+- BufferdWriter()
+	1. void newLine()写入一行
+
+			都是先取文件路径作为管道
+			FileInputStream f = new FileInputStream("路径")；
+			InputStreamReader d = new InputStreamReader(fis)//默认规范
+			BufferedReader r = new BufferedReader(d)//放入缓冲区
+			r.readerLine()读取一行，判断空不空
+	
+			当用到BufferedWriter中使用flush()方法强制清空缓存区并输出
+			close();关闭流。
+#### 序列化和反序列化
+- 能够记录自己的状态以便将来得到复原的能力，称为对象的持久化。
+- 对象通过数值描述自己的状态，把对象转换为字节序列的过程就是序列化，把字节序列恢复为对象就是对象反序列化。【只有实现Serializable 接口的类才能序列化，java中允许可序列化对象通过对象流传输】<font color="red">序列化只能保存非静态成员变量的值（修饰符不能保存），成员方法和静态变量都不行</font>
+- 序列化比如Tread对象 或 流对象 这样的成员变量必须用transient关键字标明，被标明的都不会保存
+
+		方法名 implements Serializable
+		FileOutputStream of = new FileOutputStream("data.ser");
+		ObjectOutputStream s = new ObjectOutputStream(f);
+#### 文件处理
+- 对一个文件进行I/O操作前，
+#### 简答题
+1. 创建BufferedReader对象必须先建立了一个FileReader对象，这个对象的功能是从文件"file.txt"中读取字节(byte)流，并转换为文本流
+2. 随机读写字符文件的类是RandomAccessFile
+3. 读取字符流的抽象类是java.io.Reader
+4. 在字节流和字符流之间起中介作用，充当字节流与读者之间的接口的是InputStreamReader
