--- a/java/笔记.md
+++ b/java/笔记.md
@@ -173,6 +173,7 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
 		接口不能实现接口可以继承，抽象类可以继承接口。
 		
 		java接口常量，抽象方法，构造方法(书上)
+- <font color="red">抽象类只实现接口中一个方法，继承抽象类的普通类也要实现全部</font>
 #### 简答题
  1. 类A继承扩展B，子类a和父类b的关系是 is a关系
  2. 使用关键字final的类都是不能被扩展的类
@@ -232,6 +233,7 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
 			都是先取文件路径作为管道
 			FileInputStream f = new FileInputStream("路径")；
 			InputStreamReader d = new InputStreamReader(fis)//默认规范
+				前一行必须有个Reader 和 Writer
 			BufferedReader r = new BufferedReader(d)//放入缓冲区
 			r.readerLine()读取一行，判断空不空
 	
@@ -242,7 +244,7 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
 - 对象通过数值描述自己的状态，把对象转换为字节序列的过程就是序列化，把字节序列恢复为对象就是对象反序列化。【只有实现Serializable 接口的类才能序列化，java中允许可序列化对象通过对象流传输】<font color="red">序列化只能保存非静态成员变量的值（修饰符不能保存），成员方法和静态变量都不行</font>
 - 序列化比如Tread对象 或 流对象 这样的成员变量必须用transient关键字标明，被标明的都不会保存
 
-		方法名 implements Serializable
+		类名 implements Serializable
 		FileOutputStream of = new FileOutputStream("data.ser");
 		ObjectOutputStream s = new ObjectOutputStream(f);
 #### 文件处理
@@ -252,3 +254,45 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
 2. 随机读写字符文件的类是RandomAccessFile
 3. 读取字符流的抽象类是java.io.Reader
 4. 在字节流和字符流之间起中介作用，充当字节流与读者之间的接口的是InputStreamReader
+5. 流是个抽象的概念,是对输入输出设备的抽象
+6. 输入/输出流对应的是InputStream/OutputStream
+7. 读者和写者的作用是：实现了对不同平台之间数据流中的数据进行转换
+## java swing
+- 顶层容器：JFrame,JApplet,JDialog,JWindow.
+
+		顶层容器：JFrame（能独立运行）
+		通过方法设置内容窗格：
+		1. Container c = frame.getContentPane();
+			c.add()
+		2. Jpanel cp= new JPanel();//创建面板。就像白纸
+			cp.setLayout();
+			cp.add();
+			frame.setContentPane(cp)
+
+		不能独立运行的容器： 普通面板 Jpanel 和 滚动面板 JscrollPane
+			垂直滚动： void setVerticalScrollBarPolicy(int policy);
+			水平滚动： void setHorizontalScrollBarPolicy(int policy)
+			需要时可见：
+				ScrollPaneConstants.VERTICAL_SCROLLBAR_AS_NEEDED;
+			不可见：
+				ScrollPaneConstants.VERTICAL_SCROLLBAR_AS_NEVER;
+			可见：
+				ScrollPaneConstants.VERTICAL_SCROLLBAR_AS_ALWAYS;
+
+		滚动条：
+		 Scrollbar(int orientation);构造一个具有新方向的滚动条
+			Scrollbar(int orientation，int value(大小)，int visible（可视大小），
+		int minimum，int maximum);构造一个新的滚动条
+- 布局管理器：
+	1. FlowLayout流式布局管理器（大小自动适应）</br>setLayout(new FlowLayout(FlowLAYOUT.RIGHT(右对齐，默认是左)))【jpanel默认】
+	
+	2. BorderLayout边界布局管理器
+	
+	3. GridLayout网格布局管理器（和网格组件大小变化）
+	
+	4. CardLayout卡片布局管理器<br>
+	myCard = new CardLayout();<br> contentPane.setLayout(myCard);<br>
+				contentPane.add(p1,"First")first是p1的名字<br>contentPane.add(p1,"weo")
+	5. BoxLayout盒式布局管理器
+
+- 组合框JConboBox：void setSelectedIndex()设置默认选中   object getSelectedIem()获取选定要转为字符串
