--- a/self_study/java/笔记.md
+++ b/self_study/java/笔记.md
@@ -1,16 +1,19 @@
-## 第一章 java概述
+# 第一章 java概述
+
 - java程序类名：OneApp.java；编译后:OneApp.class；编译命令：javac，运行命令java。语言解释器是：java.exe
 - java语言特点：语法简单，功能强大，安全可靠;与平台无关;解释编译两种运行方式;多线程;动态执行兼有丰富的API文档及类库。
-	1. 解释与平台无关：java编译器将java程序编译成字节码文件，字节码文件运行在jvm上，只要安装了java运行环境的系统都可以执行这些代码.
-	2. jvm(java虚拟机)：是一台虚拟计算器，通过实际计算机仿真模拟计算机各种功能来实现。类似小巧高效的CPU.
-	3. 多线程：只要继续Thread类,就可以编写执行多线程,
+  1. 解释与平台无关：java编译器将java程序编译成字节码文件，字节码文件运行在jvm上，只要安装了java运行环境的系统都可以执行这些代码.
+  2. jvm(java虚拟机)：是一台虚拟计算器，通过实际计算机仿真模拟计算机各种功能来实现。类似小巧高效的CPU.
+  3. 多线程：只要继续Thread类,就可以编写执行多线程,
+
 ## 第二章 数据和表达式
+
 - 转义字符：\U0061(字符a),\t,\141(8进制);&emsp;转义字符是一种特殊的字符常量。转义字符以反斜线"\"开头，后跟一个或几个字符。转义字符具有特定的含义。
 
 - 短路操作：左侧操作数能决定表达式的值时，跳过右侧操作数的运算。
 - java数据类型
-	1. 基本数据类型：整数类型(byte,short,int,long),浮点数类型(float,double),字符类型(char),布尔类型(boolean)
-	2. 复合数据类型:类类型(class),数组,接口类型(interface)
+  1. 基本数据类型：整数类型(byte,short,int,long),浮点数类型(float,double),字符类型(char),布尔类型(boolean)
+  2. 复合数据类型:类类型(class),数组,接口类型(interface)
 
 - 运算符：算术运算符(+ - ++),位运算符(& | ~(非，取反) >> >>>二进制进行按位运算),逻辑运算符(&& || !),关系运算符(> <= ==)
 - 优先级：[] . ++ -- +(求正) - ~ * / + -
@@ -18,238 +21,256 @@
 - 标识符定义规则：标识符由字母，数字，下划线或美元符组成的字符串，其中数字不能作为标识符开头
 
 - 类型转换指：自动类型转换，强制类型转换；>>右移，超出将被舍弃 1111(15)右移2位的结果是0000 0011(3)，
-#### 关于位运算的二进制计算
+
+### 关于位运算的二进制计算
 
 - 8进制，16进制转换为二进制再转换为10进制，**8进制逢8(000),10进制逢10()**,1>>>32相当于没有移动；
 
 <font color='red'>这是byte类型运算；在计算机中，数值一律用补码来表示和存储</font>
 
-	二进制原码-->二进制反码-->二进制补码【开始位运算】-->二进制反码-->二进制原码
-	正数(>>2：
-	。正数的补码是本身，负数的补码是他的反码+1
-		1. 其正数的补码 = 原码)：正数的补码 = 原码（不用加1）
-	 0001 0100(20)--> 0001 0100(20)--> 0000 0101(3)--> 0001 0100(20)--> 0001 0100(20)
-	负数补码：
-		1. {原码符号位不变} + {数值位按位取反后+1}
-		2. {原码符号位不变} + {数值位从右边数第一个1及其右边的0保持不变,左边安位取反}
-	负数(>>2)：其右移过程中，负数补1，正数补0---位运算过后，二进制取反加1.得出二进制原码
+    二进制原码-->二进制反码-->二进制补码【开始位运算】-->二进制反码-->二进制原码
+    正数(>>2：
+      正数的补码是本身，负数的补码是他的反码+1
+      1. 其正数的补码 = 原码)：正数的补码 = 原码（不用加1）
+     0001 0100(20)--> 0001 0100(20)--> 0000 0101(3)--> 0001 0100(20)--> 0001 0100(20)
+    负数补码：
+      1. {原码符号位不变} + {数值位按位取反后+1}
+      2. {原码符号位不变} + {数值位从右边数第一个1及其右边的0保持不变,左边安位取反}
+    负数(>>2)：其右移过程中，负数补1，正数补0---位运算过后，二进制取反加1.得出二进制原码
 
-	负数:-2>>>31
-		原码：10000000 00000000 00000000 00000010
-		反码：11111111 11111111 11111111 11111101
-		补码：11111111 11111111 11111111 11111110
-		无符号右移31位，高位补0：
-			 00000000 00000000 00000000 00000001
-		原码：00000000 00000000 00000000 00000001 =>1
-		
+    负数:-2>>>31
+      原码：10000000 00000000 00000000 00000010
+      反码：11111111 11111111 11111111 11111101
+      补码：11111111 11111111 11111111 11111110
+      无符号右移31位，高位补0：
+       00000000 00000000 00000000 00000001
+    原码：00000000 00000000 00000000 00000001 =>1
+  
 ## 第三章 流程控制语句
+
 - 赋值语句：表达式可以当作一个值赋给某个变量；对应于顺序流语句
 
 - 分支语句：
-	>if语句 和 switch语句( switch(表达式){case c1：语句组 1；break; default: 语句组;break;} 【其中表达式：int类型 和 char类型】)
+  >if语句 和 switch语句( switch(表达式){case c1：语句组 1；break; default: 语句组;break;} 【其中表达式：int类型 和 char类型】)
 - 循环语句：
-	>for语句 ，while语句 和 do语句(do{ ------ } while();)
-#### 简答题
+  >for语句 ，while语句 和 do语句(do{ ------ } while();)
+
+### 简答题
+
 - 流程控制语句：
 
-	1.switch语句执行过程：计算表达式的值，用该值依次和c1，c2..比较。相符执行case之后的语句组，break后跳出语句。不符合就执行default之后的语句。
-	
-	2.嵌套if语句，else对应规则：if和else的配对原则都是在同一个复合语句括号“{}”作用域内就近配对的原则。如果不属于同一个复合语句括号“{}”作用域内，则不会被配对。 
-	
-	3.do语句与while语句区别:
+  1.switch语句执行过程：计算表达式的值，用该值依次和c1，c2..比较。相符执行case之后的语句组，break后跳出语句。不符合就执行default之后的语句。
+  
+  2.嵌套if语句，else对应规则：if和else的配对原则都是在同一个复合语句括号“{}”作用域内就近配对的原则。如果不属于同一个复合语句括号“{}”作用域内，则不会被配对。 
+  
+  3.do语句与while语句区别:
 
-	>do首先执行循环体语句，然后判定条件表达式的值，值为真，重复执行循环体语句，直到表达式的值为假时结束循环。不论真假，do至少执行一次。
-	
-	>while计算表达式的值，为真，重复执行循环体语句。为假时结束，条件表达式判断为假不执行循环体语句，一直为真，一直执行。
+  >do首先执行循环体语句，然后判定条件表达式的值，值为真，重复执行循环体语句，直到表达式的值为假时结束循环。不论真假，do至少执行一次。  
+  >while计算表达式的值，为真，重复执行循环体语句。为假时结束，条件表达式判断为假不执行循环体语句，一直为真，一直执行。
 
-	4.while与for适用情况:while循环常用于那种不知道循环次数是多少的情况(条件循环时),适用于循环处理的过程中就要将循环变量增加时，for循环多用于循环次数比较明确的情况。
+  4.while与for适用情况:while循环常用于那种不知道循环次数是多少的情况(条件循环时),适用于循环处理的过程中就要将循环变量增加时，for循环多用于循环次数比较明确的情况。
 - 异常：
-	1. Java 中的异常（Exception）又称为例外，是一个在程序执行期间发生的事件，它中断正在执行程序的正常指令流。
-	2. 异常的分类和产生的原因：
-		>受检异常：程序执行期间发生的严重事件的后果，比如磁盘读取数据，系统却找不到相应文件（必须处理）
-		
-		>运行时异常：程序中逻辑错误的结果，比如空指针异常和数组下标越界异常。
+  1. Java 中的异常（Exception）又称为例外，是一个在程序执行期间发生的事件，它中断正在执行程序的正常指令流。
+  2. 异常的分类和产生的原因：
+    >受检异常：程序执行期间发生的严重事件的后果，比如磁盘读取数据，系统却找不到相应文件（必须处理）  
+    >运行时异常：程序中逻辑错误的结果，比如空指针异常和数组下标越界异常。  
+    >错误：是标准类Error或其后代类的一个对象，错误是指发生了不正确的情况，比如内存溢出
 
-		>错误：是标准类Error或其后代类的一个对象，错误是指发生了不正确的情况，比如内存溢出
+  3.抛出和捕获概念：
+    > a. 抛出:throw程序员不在当前方法内处理异常，而是把异常抛出到调用方法。适用在不能合理的来解决不正常或意外事件的情况；  
+    > b. 捕获：try{}catch(){};寻找相对应的处理代码，并把异常对象交给相应方法进行处理的这一过程称为捕获。try 代码执行块 catch 异常处理块
 
-	3.抛出和捕获概念：
-
-		a. 抛出:throw程序员不在当前方法内处理异常，而是把异常抛出到调用方法。适用在不能合理的来解决不正常或意外事件的情况；
-		
-		b. 捕获：try{}catch(){};寻找相对应的处理代码，并把异常对象交给相应方法进行处理的这一过程称为捕获。try 代码执行块 catch 异常处理块
-
-		【其中try后大括号中代码执行了System.exit(),则不处理finally后面的语句，否则finally语句都会执行】
+    【其中try后大括号中代码执行了System.exit(),则不处理finally后面的语句，否则finally语句都会执行】
 
 - 异常举例
-	1. NullPointerException空指针异常，访问或者调用未实例化的对象。
-	2. ArithmeticException算术运算异常，除数为0的情况。
-	3. ArrayIndexOutOfBoundsException数组小标越界异常，访问数组小标>=数组对象.length
+  1. NullPointerException空指针异常，访问或者调用未实例化的对象。
+  2. ArithmeticException算术运算异常，除数为0的情况。
+  3. ArrayIndexOutOfBoundsException数组小标越界异常，访问数组小标>=数组对象.length
 
 ## 第四章 面向对象程序设计
+
 - 构造方法不能从父类继承，构造函数应该为所有成员变量赋初值**构造方法的正常用途是初始化对象实例，默认的无参构造方法会把所有未初始化的成员变量设为默认值**；继承关系中只能在子类的构造函数中的第一行调用父类的构造函数，用super(参数).
+
 - 实例方法可以相互调用，因为在同一个类中。实例方法不能调用静态方法，静态方法可以嗲用实例方法。
 - java程序调用方法，参数传送采用的是值传送<font color="blue">值传递和引用传递(其实还是值传递只是把实际参数（一个引用）拷贝一份赋值给形式参数，形式参数进行操作)</font>
 
-#### 简答题
-	1.类定义，类特性，类要素：
-		a. 类的定义也称为类的声明，class关键字修饰表明其后定义的是一个类
-		b. 类的特性：多态，封装，继承。
-		c. 类中包含两部分元素：成员变量和成员方法。
+### 简答题1
 
-	2.类和对象的区别：
-		类是实体在计算机中的反映，对象是具有类类型的变量，类是对象的抽象，而对象是类的具体实例。
+  1. 类定义，类特性，类要素：
+    a. 类的定义也称为类的声明，class关键字修饰表明其后定义的是一个类
+    b. 类的特性：多态，封装，继承。
+    c. 类中包含两部分元素：成员变量和成员方法。
 
-	3.static关键字什么意思和作用
-		1. 意思：是将几个对象中相同的成员单独提取后，放在类里声明静态的产物
-		2. 被static修饰的变量、被static修饰的方法统一属于类的静态资源，是类实例之间共享的。
-		
-	4.静态方法和静态变量：
-		由static关键字标记，无需创建对象实例的时候就可以引用的方法和变量，是独立存在的只是位置放在类下。
+  2. 类和对象的区别：
+    类是实体在计算机中的反映，对象是具有类类型的变量，类是对象的抽象，而对象是类的具体实例。
 
-	5.静态变量与实例变量：
-		1. 静态变量：存储在静态存储区，程序一启动就存在，static关键字修饰。
-		2. 实例变量：存储在堆中，需先初始化这个类才可以调用。
-		
-	6.new完成那些功能：new操作符对对象类型实例化。调用构造函数（new的时候向构造函数传值)；给对象分配空间。
+  3. static关键字什么意思和作用
+    1. 意思：是将几个对象中相同的成员单独提取后，放在类里声明静态的产物
+    2. 被static修饰的变量、被static修饰的方法统一属于类的静态资源，是类实例之间共享的。
+  4. 静态方法和静态变量：
+    由static关键字标记，无需创建对象实例的时候就可以引用的方法和变量，是独立存在的只是位置放在类下。
 
-	7. 什么是null引用：null引用是null类型表达式唯一可能的值，null引用可以转换为任意引用类型。
+  5. 静态变量与实例变量：
+    1. 静态变量：存储在静态存储区，程序一启动就存在，static关键字修饰。
+    2. 实例变量：存储在堆中，需先初始化这个类才可以调用。  
+  6. new完成那些功能：new操作符对对象类型实例化。调用构造函数（new的时候向构造函数传值)；给对象分配空间。
+
+  7. 什么是null引用：null引用是null类型表达式唯一可能的值，null引用可以转换为任意引用类型。
+
 ## 第五章 数组和字符串 trim()去除前后空格
+
 - Sttring类不可被继承，因为有final修饰
 
 - 创建数组和数组静态初始化：
-	1. 申明数组：int inA[]; double[] int;
-	2. 静态初始化：int[] a={1,2}
+  1. 申明数组：int inA[]; double[] int;
+  2. 静态初始化：int[] a={1,2}
 - 动态初始化：
-	1. `String names[] = new String[2];names[1] = "t";`
+  1. `String names[] = new String[2];names[1] = "t";`
 - 多维数组申明:
-	int t[][]; double[][] a	;int[] a[];int a[][]={{1,2},{2,3}};<br>
-	int a[][] =new int[2][];(只申明第一个)；<br>
-	a[1]=new int[4];<br>
-	a[1][3]=3;（string也一样）
+  int t[][]; double[][] a  ;int[] a[];int a[][]={{1,2},{2,3}};  
+  int a[][] =new int[2][];(只申明第一个)；  
+  a[1]=new int[4];  
+  a[1][3]=3;（string也一样）
 
 - 空字符串：String s1 = new String();
 
-```
-	string str1 = "";    //空字符串,分配了内存分配了一个空间
-	string str2 = null; //NULL	null：未分配内存
+```java
+    string str1 = "";    //空字符串,分配了内存分配了一个空间
+    string str2 = null; //NULL  null：未分配内存
 ```
 
 - String是不可变字符串，StringBuffer是可变字符串.Vector是变长字符串()，其中有构造方法
 Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容量增量)的空向量vector
-	1. 方法1：addElement(Object obj)将元素添加到序列尾部。
-	2. add(int index，Object obj)在指定位置插入指定元素。
-	3. 修改某位置处的元素 setElementAt(Object obj,int index);
-	4. removeElement(Object obj)删除第一个与指定元素相同的值，返回的是布尔型表示成功与否。
-	5. removeElementAt(int index)
-#### 填空简答题 
-	1. 运算符==判断的是：两个对象在内存的存储空间是否相同。
-	2. 数组静态化：在数组声明的时候赋初始值。
-	3. 数组的下标可以是整型常量和表达式。
-	4. int[] arr 存在于堆内存，new int[3] 存在于栈内存。new 出来的对象都有一个唯一的地址值，相当于把堆内存的地址值赋值给栈内存的的数组。
+  1. 方法1：addElement(Object obj)将元素添加到序列尾部。
+  2. add(int index，Object obj)在指定位置插入指定元素。
+  3. 修改某位置处的元素 setElementAt(Object obj,int index);
+  4. removeElement(Object obj)删除第一个与指定元素相同的值，返回的是布尔型表示成功与否。
+  5. removeElementAt(int index)
+
+### 填空简答题2
+
+  1. 运算符==判断的是：两个对象在内存的存储空间是否相同。
+  2. 数组静态化：在数组声明的时候赋初始值。
+  3. 数组的下标可以是整型常量和表达式。
+  4. int[] arr 存在于堆内存，new int[3] 存在于栈内存。new 出来的对象都有一个唯一的地址值，相当于把堆内存的地址值赋值给栈内存的的数组。
 
 ## 第六章 继承与多态
+
 - 继承了父类的成员变量。
 - equals判断对象的时候是，使用的是从object继承来的equals方法是==，其中string覆盖的equals判断的是值相同。
 - 派生类可以使用基类的除私有方法和变量外所有(继承所有不能选择性的继承)。
 - 对象转型：将子类的对象赋给父类变量。
 
-		判断引用指向那个对象 instanceof.如果判定父类引用指向子类实例。
-		A(父类) a =new B();
-		if(a instanceof B){
-			B b=(B)a;a.类属性//就可以使用基类的属性了。
-		}
-		
-		
+    判断引用指向那个对象 instanceof.如果判定父类引用指向子类实例。
+    A(父类) a =new B();
+    if(a instanceof B){
+      B b=(B)a;a.类属性//就可以使用基类的属性了。
+    }
 - **覆盖与多态**
-	1. 通过方法覆盖(只有继承)可以达到语言多态性目的。<font color="red">同名同参是覆盖，但是访问权限不能更严格___同名不同参叫重载(属于同一个类)</font>
+  1. 通过方法覆盖(只有继承)可以达到语言多态性目的。<font color="red">同名同参是覆盖，但是访问权限不能更严格___同名不同参叫重载(属于同一个类)</font>
 
 - 终极方法也就是final修饰的不能被覆盖。<font color="green">终极变量是final修饰，常量是 static final</font>终极类不能被继承:保证一个方法指向String类的引用，是一个真正的String类型(比如string类)
 - **抽象类**：抽象类中有任何成员方法，(包括构造方法，抽象方法[只是方法的申明没有实现])，不能在非抽象类中定义抽象方法。<font color="blue">接口就是全部是抽象方法和常量（就是终极静态变量）</font> <font color="red">抽象类不能创建对象，只能继承或者对象转型来使用</font>
 - **接口实现**：implements关键字。
 
-		普通类不能有抽象方法，实现类必须要完整的重写抽象类所有的方法。
-		实现类！部分不重写的话子类只能也是抽象类。。直至。。。。所有抽象方法被全部重写为止。
-		
-		接口不能实现接口可以继承，抽象类可以继承接口。
-		
-		java接口常量，抽象方法，构造方法(书上)
+    普通类不能有抽象方法，实现类必须要完整的重写抽象类所有的方法。
+    实现类！部分不重写的话子类只能也是抽象类。。直至。。。。所有抽象方法被全部重写为止。
+    接口不能实现接口可以继承，抽象类可以继承接口。  
+
+    java接口常量，抽象方法，构造方法(书上)
 - <font color="red">抽象类只实现接口中一个方法，继承抽象类的普通类也要实现全部</font>
-#### 简答题
+
+### 简答题3
+
  1. 类A继承扩展B，子类a和父类b的关系是 is a关系
  2. 使用关键字final的类都是不能被扩展的类
  3. 接口所有变量的属性为public
  4. 什么是多态：定义的引用变量，所指向的具体类型和 通过该引用变量发出的方法调用在编程时并不确定。重载一个方法名可以看作多态，由对象确定调用父类或者子类的那个方法。
 
 ## 第七章 输入和输出流
+
 - <font color="blue">基本字节数据流：文件数据流 ，过滤器数据流 ；基本字符流： 读者和写者</font>，File类不属于流，用于处理文件
 - 数据流指一组有顺序的，有起点和终点的字节集合。
-- io包提供了4个基本抽象类：<font color="red">InputStream , OutputStream ,Reader ,	Writer</font>
+- io包提供了4个基本抽象类：<font color="red">InputStream , OutputStream ,Reader ,  Writer</font>
 - 输入数据流：
-	1. int available()返回数据流中可读取的字节数(实际可能大于返回值).
-	2. int read()输入流读取一个字节的二进制数据。
-	3. int read(byte[] b , int off,int len)从输入流中读取长度为len的数据从数组小标为off处放置
+  1. int available()返回数据流中可读取的字节数(实际可能大于返回值).
+  2. int read()输入流读取一个字节的二进制数据。
+  3. int read(byte[] b , int off,int len)从输入流中读取长度为len的数据从数组小标为off处放置
 - 输出字节流：
-	1. void flush();刷新并强制写出所有缓冲的输出字节
-	2. void write(int i)将字节i写入数据流
+  1. void flush();刷新并强制写出所有缓冲的输出字节
+  2. void write(int i)将字节i写入数据流
 
-#### 文件数据流
+### 文件数据流
+
 - FileInputStream文件读取 FileOutputStream文件输出
 
-		FileInputStream in =new FileInputStream("路径")
-		while(in.available > 0)
-		System.out.print( in.read() +"");
-		in.close();
-#### 过滤器数据流
+    FileInputStream in =new FileInputStream("路径")
+    while(in.available > 0)
+    System.out.print( in.read() +"");
+    in.close();
+
+### 过滤器数据流
+
 - 缓冲区数据流：BufferedInputStream 和 BufferedOutputStream 都属于过滤器数据流。
-		
+
 - 数据数据流：DataInputStream 和 DataOutputStream 允许读写 Java基本类型（按类型读写）
-	1. double readDouble()
-	2. char readChar()
-	3. String readUTF()
-	4. boolean readBoolean()
-	
-	a.void wirteBoolean(boolean aBool)
+  1. double readDouble()
+  2. char readChar()
+  3. String readUTF()
+  4. boolean readBoolean()
+  
+  a.void wirteBoolean(boolean aBool)
 
 - 对象流：
-	1.void wirteObject();
-	2.Object readObject();需要向所要的对象强制转换。
+  1.void wirteObject();
+  2.Object readObject();需要向所要的对象强制转换。
 
-		同一套路：
-		举例将对象信息写入文件；向文件写对象流创建
-		FileOutputStram f = new FileOutputStream("路径");
-		ObjectOutputStream s = new ObjectOutputStream(f);
-#### 读者和写者  
+    同一套路：
+    举例将对象信息写入文件；向文件写对象流创建
+    FileOutputStram f = new FileOutputStream("路径");
+    ObjectOutputStream s = new ObjectOutputStream(f);
+
+### 读者和写者  
+
 - InputStreamReader 和 OutputStreamWriter 类，通过这个实现不同平台之间数据流的数据进行转换。
-	1. InputStreamReader(InputStream in)默认规范
-	2. InputStreamReader(InputStream in,string enc)指定规范enc
+  1. InputStreamReader(InputStream in)默认规范
+  2. InputStreamReader(InputStream in,string enc)指定规范enc
 - FileReader 和 FileWriter 是文件字符读者 和 写者。
-	1. wirte(String);将一个字符串写入文件
-#### 缓冲区读者和缓冲区写者
-- BufferedReader()
-	1. String readLine();读一行 
-- BufferdWriter()
-	1. void newLine()写入一行
+  1. wirte(String);将一个字符串写入文件
 
-			都是先取文件路径作为管道
-			FileInputStream f = new FileInputStream("路径")；
-			InputStreamReader d = new InputStreamReader(fis)//默认规范
-				前一行必须有个Reader 和 Writer
-			BufferedReader r = new BufferedReader(d)//放入缓冲区
-			r.readerLine()读取一行，判断空不空
-	
-			当用到BufferedWriter中使用flush()方法强制清空缓存区并输出
-			close();关闭流。
-#### 序列化和反序列化
+### 缓冲区读者和缓冲区写者
+
+- BufferedReader()
+  1. String readLine();读一行
+- BufferdWriter()
+  1. void newLine()写入一行
+
+      都是先取文件路径作为管道
+      FileInputStream f = new FileInputStream("路径")；
+      InputStreamReader d = new InputStreamReader(fis)//默认规范
+        前一行必须有个Reader 和 Writer
+      BufferedReader r = new BufferedReader(d)//放入缓冲区
+      r.readerLine()读取一行，判断空不空
+  
+      当用到BufferedWriter中使用flush()方法强制清空缓存区并输出
+      close();关闭流。
+
+### 序列化和反序列化
+
 - 能够记录自己的状态以便将来得到复原的能力，称为对象的持久化。
 - 对象通过数值描述自己的状态，把对象转换为字节序列的过程就是序列化，把字节序列恢复为对象就是对象反序列化。【只有实现Serializable 接口的类才能序列化，java中允许可序列化对象通过对象流传输】<font color="red">序列化只能保存非静态成员变量的值（修饰符不能保存），成员方法和静态变量都不行</font>
 - 序列化比如Tread对象 或 流对象 这样的成员变量必须用transient关键字标明，被标明的都不会保存
 
-		类名 implements Serializable
-		FileOutputStream of = new FileOutputStream("data.ser");
-		ObjectOutputStream s = new ObjectOutputStream(f);
-#### 文件处理
+    类名 implements Serializable
+    FileOutputStream of = new FileOutputStream("data.ser");
+    ObjectOutputStream s = new ObjectOutputStream(f);
+
+### 文件处理
+
 - 对一个文件进行I/O操作前，
-#### 简答题
+
+### 简答题4
+
 1. 创建BufferedReader对象必须先建立了一个FileReader对象，这个对象的功能是从文件"file.txt"中读取字节(byte)流，并转换为文本流
 2. 随机读写字符文件的类是RandomAccessFile
 3. 读取字符流的抽象类是java.io.Reader
@@ -257,42 +278,46 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
 5. 流是个抽象的概念,是对输入输出设备的抽象
 6. 输入/输出流对应的是InputStream/OutputStream
 7. 读者和写者的作用是：实现了对不同平台之间数据流中的数据进行转换
+
 ## java swing
+
 - 顶层容器：JFrame,JApplet,JDialog,JWindow.
 
-		顶层容器：JFrame（能独立运行）
-		通过方法设置内容窗格：
-		1. Container c = frame.getContentPane();
-			c.add()
-		2. Jpanel cp= new JPanel();//创建面板。就像白纸
-			cp.setLayout();
-			cp.add();
-			frame.setContentPane(cp)
+    顶层容器：JFrame（能独立运行）
+    通过方法设置内容窗格：
+    1. Container c = frame.getContentPane();
+      c.add()
+    2. Jpanel cp= new JPanel();//创建面板。就像白纸
+      cp.setLayout();
+      cp.add();
+      frame.setContentPane(cp)
 
-		不能独立运行的容器： 普通面板 Jpanel 和 滚动面板 JscrollPane
-			垂直滚动： void setVerticalScrollBarPolicy(int policy);
-			水平滚动： void setHorizontalScrollBarPolicy(int policy)
-			需要时可见：
-				ScrollPaneConstants.VERTICAL_SCROLLBAR_AS_NEEDED;
-			不可见：
-				ScrollPaneConstants.VERTICAL_SCROLLBAR_AS_NEVER;
-			可见：
-				ScrollPaneConstants.VERTICAL_SCROLLBAR_AS_ALWAYS;
+    不能独立运行的容器： 普通面板 Jpanel 和 滚动面板 JscrollPane
+      垂直滚动： void setVerticalScrollBarPolicy(int policy);
+      水平滚动： void setHorizontalScrollBarPolicy(int policy)
+      需要时可见：
+        ScrollPaneConstants.VERTICAL_SCROLLBAR_AS_NEEDED;
+      不可见：
+        ScrollPaneConstants.VERTICAL_SCROLLBAR_AS_NEVER;
+      可见：
+        ScrollPaneConstants.VERTICAL_SCROLLBAR_AS_ALWAYS;
 
-		滚动条：
-		 Scrollbar(int orientation);构造一个具有新方向的滚动条
-			Scrollbar(int orientation，int value(大小)，int visible（可视大小），
-		int minimum，int maximum);构造一个新的滚动条
+    滚动条：
+     Scrollbar(int orientation);构造一个具有新方向的滚动条
+      Scrollbar(int orientation，int value(大小)，int visible（可视大小），
+    int minimum，int maximum);构造一个新的滚动条
 - 布局管理器：
-	1. FlowLayout流式布局管理器（大小自动适应）</br>setLayout(new FlowLayout(FlowLAYOUT.RIGHT(右对齐，默认是左)))【jpanel默认】
-	
-	2. BorderLayout边界布局管理器
-	
-	3. GridLayout网格布局管理器（和网格组件大小变化）
-	
-	4. CardLayout卡片布局管理器<br>
-	myCard = new CardLayout();<br> contentPane.setLayout(myCard);<br>
-				contentPane.add(p1,"First")first是p1的名字<br>contentPane.add(p1,"weo")
-	5. BoxLayout盒式布局管理器
+  1. FlowLayout流式布局管理器（大小自动适应）</br>setLayout(new FlowLayout(FlowLAYOUT.RIGHT(右对齐，默认是左)))【jpanel默认】
+     > FlowLayout(int align,int hgap,int vgap)指定对齐方式和水平及垂直间距。
 
-- 组合框JConboBox：void setSelectedIndex()设置默认选中   object getSelectedIem()获取选定要转为字符串
+  2. BorderLayout边界布局管理器  
+
+  3. GridLayout网格布局管理器（和网格组件大小变化）
+
+  4. CardLayout卡片布局管理器  
+  myCard = new CardLayout();   contentPane.setLayout(myCard);  
+        contentPane.add(p1,"First")first是p1的名字  contentPane.add(p1,"weo")
+  5. BoxLayout盒式布局管理器
+
+- 组合框JConboBox：void setSelectedIndex()设置默认选中   object getSelectedIem()获取选定要转为字符串；
+ActionEvent 和 ItemEvent 中都有getSource()方法；ItemEvent 还提供了getItem()的方法作用类似；
