--- a/self_study/java/笔记.md
+++ b/self_study/java/笔记.md
@@ -1,6 +1,7 @@
 # 第一章 java概述
 
-- java程序类名：OneApp.java；编译后:OneApp.class；编译命令：javac，运行命令java。语言解释器是：java.exe
+- java程序类名：OneApp.java；编译后:OneApp.class；编译命令：javac，运行命令java。语言解释器是：java.exe，jdb调试器
+- 生僻的关键字：cast,const,future,generic|dʒəˈnerɪk类的.泛型,goto，instanceof,native,operator,rest,transient|trænziənt短暂的,volatile
 - java语言特点：语法简单，功能强大，安全可靠;与平台无关;解释编译两种运行方式;多线程;动态执行兼有丰富的API文档及类库。
   1. 解释与平台无关：java编译器将java程序编译成字节码文件，字节码文件运行在jvm上，只要安装了java运行环境的系统都可以执行这些代码.
   2. jvm(java虚拟机)：是一台虚拟计算器，通过实际计算机仿真模拟计算机各种功能来实现。类似小巧高效的CPU.
@@ -8,7 +9,7 @@
 
 ## 第二章 数据和表达式
 
-- 转义字符：\U0061(字符a),\t,\141(8进制);&emsp;转义字符是一种特殊的字符常量。转义字符以反斜线"\"开头，后跟一个或几个字符。转义字符具有特定的含义。
+- 转义字符：\U0061(字符a),\t,\141(8进制);&emsp;转义字符是一种特殊的字符常量。转义字符以反斜线"\"开头，后跟一个或几个字符。转义字符具有特定的含义。int -2的31到2的31-1，浮点数0.001327e+6
 
 - 短路操作：左侧操作数能决定表达式的值时，跳过右侧操作数的运算。
 - java数据类型
@@ -21,6 +22,7 @@
 - 标识符定义规则：标识符由字母，数字，下划线或美元符组成的字符串，其中数字不能作为标识符开头
 
 - 类型转换指：自动类型转换，强制类型转换；>>右移，超出将被舍弃 1111(15)右移2位的结果是0000 0011(3)，
+- switch(){case 1:;;case 2: case3: ;; default:;}
 
 ### 关于位运算的二进制计算
 
@@ -61,9 +63,9 @@
 
   1.switch语句执行过程：计算表达式的值，用该值依次和c1，c2..比较。相符执行case之后的语句组，break后跳出语句。不符合就执行default之后的语句。
   
-  2.嵌套if语句，else对应规则：if和else的配对原则都是在同一个复合语句括号“{}”作用域内就近配对的原则。如果不属于同一个复合语句括号“{}”作用域内，则不会被配对。 
+  2.嵌套if语句，else对应规则：if和else的配对原则都是在同一个复合语句括号“{}”作用域内就近配对的原则。如果不属于同一个复合语句括号“{}”作用域内，则不会被配对。
   
-  3.do语句与while语句区别:
+  3.do语句与while语句区别:l
 
   >do首先执行循环体语句，然后判定条件表达式的值，值为真，重复执行循环体语句，直到表达式的值为假时结束循环。不论真假，do至少执行一次。  
   >while计算表达式的值，为真，重复执行循环体语句。为假时结束，条件表达式判断为假不执行循环体语句，一直为真，一直执行。
@@ -81,15 +83,18 @@
     > b. 捕获：try{}catch(){};寻找相对应的处理代码，并把异常对象交给相应方法进行处理的这一过程称为捕获。try 代码执行块 catch 异常处理块
 
     【其中try后大括号中代码执行了System.exit(),则不处理finally后面的语句，否则finally语句都会执行】
+  4. throws关键字在方法名后面，throw方法里面
 
 - 异常举例
   1. NullPointerException空指针异常，访问或者调用未实例化的对象。
-  2. ArithmeticException算术运算异常，除数为0的情况。
+  2. ArithmeticException算术运算异常，除数为0的情况。【Arithmetic|əˈrɪθmətɪk算术运算】
   3. ArrayIndexOutOfBoundsException数组小标越界异常，访问数组小标>=数组对象.length
+  4. ClassCastException【cast投，计算】
+  5.NegativeArraySizeException元素个数为负数【Negative|neɡətɪv负数】
 
 ## 第四章 面向对象程序设计
 
-- 构造方法不能从父类继承，构造函数应该为所有成员变量赋初值**构造方法的正常用途是初始化对象实例，默认的无参构造方法会把所有未初始化的成员变量设为默认值**；继承关系中只能在子类的构造函数中的第一行调用父类的构造函数，用super(参数).
+- 构造方法不能从父类继承，构造函数应该为所有成员变量赋初值**构造方法的正常用途是初始化对象实例，默认的无参构造方法会把所有未初始化的成员变量设为默认值**；  继承关系中只能在子类的构造函数中的第一行调用父类的构造函数，用super(参数).this用来指明要操作的对象自身。类的对象也就是类的实例是类的特定成员
 
 - 实例方法可以相互调用，因为在同一个类中。实例方法不能调用静态方法，静态方法可以嗲用实例方法。
 - java程序调用方法，参数传送采用的是值传送<font color="blue">值传递和引用传递(其实还是值传递只是把实际参数（一个引用）拷贝一份赋值给形式参数，形式参数进行操作)</font>
@@ -115,11 +120,11 @@
     2. 实例变量：存储在堆中，需先初始化这个类才可以调用。  
   6. new完成那些功能：new操作符对对象类型实例化。调用构造函数（new的时候向构造函数传值)；给对象分配空间。
 
-  7. 什么是null引用：null引用是null类型表达式唯一可能的值，null引用可以转换为任意引用类型。
+  7. 什么是null引用：null引用是null类型表达式唯一可能的值，null引用可以转换为任意引用类型。char类型的包装类是Character,void-Void,int-Integer  自动装箱和拆箱 Inerger b = 1;int 2 = new Inerger(39);
 
 ## 第五章 数组和字符串 trim()去除前后空格
 
-- Sttring类不可被继承，因为有final修饰
+- String类不可被继承，因为有final修饰,申明对象是给他分配一个引用空间，实例是分配具体的空间，比如含100个元素的数组。MAX_VALUE最大，MIN_VALUE计算数组那个值最大的时候用。  二维数组的length属性只表示第一维长度，数组复制System.arraycopy(arr1,1,arr2,2,3)[1是复制开始的位置，2是目标数组小标，3是复制长度]
 
 - 创建数组和数组静态初始化：
   1. 申明数组：int inA[]; double[] int;
@@ -156,7 +161,7 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
 
 ## 第六章 继承与多态
 
-- 继承了父类的成员变量。
+- 子类继承父类的所有的非私有的方法和属性。子类调用父类，重写的方法必须用super(此时的方法可能从祖先类中继承过来)其他不必，如同同一个类中一样直接使用，同一类中静态方法中使用需要new
 - equals判断对象的时候是，使用的是从object继承来的equals方法是==，其中string覆盖的equals判断的是值相同。
 - 派生类可以使用基类的除私有方法和变量外所有(继承所有不能选择性的继承)。
 - 对象转型：将子类的对象赋给父类变量。
@@ -180,14 +185,20 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
     java接口常量，抽象方法，构造方法(书上)
 - <font color="red">抽象类只实现接口中一个方法，继承抽象类的普通类也要实现全部</font>
 
+### 多态
+
+- 静态类型(也称引用类型)是出现在声明中的类型，比如 A a; 变量的动态类型是运行过程中某一时刻指向的对象类型,比如A a = new B();a的动态类型是B  调用可能被覆盖的方法的这种处理方式称为动态绑定,就是用B中的方法而不是A中的方法
+
 ### 简答题3
 
  1. 类A继承扩展B，子类a和父类b的关系是 is a关系
  2. 使用关键字final的类都是不能被扩展的类
  3. 接口所有变量的属性为public
  4. 什么是多态：定义的引用变量，所指向的具体类型和 通过该引用变量发出的方法调用在编程时并不确定。重载一个方法名可以看作多态，由对象确定调用父类或者子类的那个方法。
+ 5. 判断引用指向那个实例. e instanceof c如果对象e是对象c的实例就返回true.同名不同参数列表是重载，同名同参数列表是重写(覆盖)
+ 6. 接口不能new但是可以申明接口类型的变量用来指向具体的类实例进行操作
 
-## 第七章 输入和输出流
+## 第七章 输入和输出流 要抛出异常
 
 - <font color="blue">基本字节数据流：文件数据流 ，过滤器数据流 ；基本字符流： 读者和写者</font>，File类不属于流，用于处理文件
 - 数据流指一组有顺序的，有起点和终点的字节集合。
@@ -196,9 +207,12 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
   1. int available()返回数据流中可读取的字节数(实际可能大于返回值).
   2. int read()输入流读取一个字节的二进制数据。
   3. int read(byte[] b , int off,int len)从输入流中读取长度为len的数据从数组小标为off处放置
+  4. long skip(long l)跳过指定数量l不读取
+  5. void mark(int ma)标记数据流此时的位置，并划出缓冲区, void reset()将输入流定位到最后嗲用mark的地方【reset重置清零|riːdaɪˈrekt重定向adj再直接的】
 - 输出字节流：
   1. void flush();刷新并强制写出所有缓冲的输出字节
   2. void write(int i)将字节i写入数据流
+    FileInputStream in=new FileInputStream("")；in.available
 
 ### 文件数据流
 
@@ -209,17 +223,17 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
     System.out.print( in.read() +"");
     in.close();
 
-### 过滤器数据流
+### 过滤器数据流filter(过滤器)
 
-- 缓冲区数据流：BufferedInputStream 和 BufferedOutputStream 都属于过滤器数据流。
+- 也提供了对mark(),reset(),和skip()的支持,inputstream 和outputstream是抽象类，
+- 缓冲区数据流：BufferedInputStream 和 BufferedOutputStream 都属于过滤器数据流。  inputstream is = new bufferedinputstream(new fileinputstream("文件")，1024)1024是设置的缓冲区大小  实际用的是datainputstream data = new datainputstream()
 
 - 数据数据流：DataInputStream 和 DataOutputStream 允许读写 Java基本类型（按类型读写）
   1. double readDouble()
   2. char readChar()
   3. String readUTF()
-  4. boolean readBoolean()
-  
-  a.void wirteBoolean(boolean aBool)
+  4. boolean readBoolean()  
+  5.void wirteBoolean(boolean aBool)
 
 - 对象流：
   1.void wirteObject();
@@ -267,7 +281,15 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
 
 ### 文件处理
 
-- 对一个文件进行I/O操作前，
+- 对同一目录下多个文件处理new file("/","文件");
+
+```java
+    文件名相关方法：getName(),getPath(),绝对路径getAbsolutePath(),getParent()获取父目录名称，boolean renameTo(File newName)更改文件名
+    exists()是否存在，canWirte(是否可写)，isAbsolute是否绝对路径，long lastModified()获取最后修改时间
+    mkdir()创建新目录，mkdirs()可生成多层次目录new File(path).mkdir();
+    a = new RandomAccessFile("文件名/路径","只读r/读写rw").seek(a.length())方法是将文件指针置于绝对位置(现在是尾部)，
+    再用wirte就在原文件后面添加写入信息。
+```
 
 ### 简答题4
 
@@ -321,3 +343,14 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
 
 - 组合框JConboBox：void setSelectedIndex()设置默认选中   object getSelectedIem()获取选定要转为字符串；
 ActionEvent 和 ItemEvent 中都有getSource()方法；ItemEvent 还提供了getItem()的方法作用类似；
+
+## 补充
+
+- 基础方法：
+
+```java
+ char charAt(int index)返回索引处字符  new Scanner(System.in).nextDouble输入double型 string独有(replace(old,new) toLowerCase()转小写 toUpperCase()大写 concat(str)str连接当前字符串尾部 valueOf(别的类型)将别的类型转换为字符串) capacity()返回当前容量【capacity|kəˈpæsəti容量能力】  Vector类中添加元素-addElement(obj) insertElementAt(obj，index)在index处插入obj elementAt(index)在index处的元素
+```
+
+- NumberFormat对数值格式化，不能用new实例化。NumberFormat.getInstance().format(myNumber)返回当前默认语言环境默认数值格式。  
+getNumberInstance()通用数值格式，getPercentInstance()百分比格式，getCurrencyInstance()通用格式。  【Instance实例，例子`Percent|pə'sent`百分比,`Currency|kʌrənsi通货`】  new DecimalFormat("0.###").format(myNum)对数值保留3位
