--- a/self_study/java/笔记.md
+++ b/self_study/java/笔记.md
@@ -2,9 +2,9 @@
 
 - java程序类名：OneApp.java；编译后:OneApp.class；编译命令：javac，运行命令java。语言解释器是：java.exe
 - java语言特点：语法简单，功能强大，安全可靠;与平台无关;解释编译两种运行方式;多线程;动态执行兼有丰富的API文档及类库。
-  1. 解释与平台无关：java编译器将java程序编译成字节码文件，字节码文件运行在jvm上，只要安装了java运行环境的系统都可以执行这些代码.
+  1. 解释与平台无关：java编译器(javac.exe)将java程序编译成字节码文件，字节码文件运行在jvm上，只要安装了java运行环境的系统都可以执行这些代码.
   2. jvm(java虚拟机)：是一台虚拟计算器，通过实际计算机仿真模拟计算机各种功能来实现。类似小巧高效的CPU.
-  3. 多线程：只要继续Thread类,就可以编写执行多线程,
+  3. 多线程：只要继承Thread类,就可以编写执行多线程,
 
 ## 第二章 数据和表达式
 
@@ -26,17 +26,38 @@
 
 - 8进制，16进制转换为二进制再转换为10进制，**8进制逢8(000),10进制逢10()**,1>>>32相当于没有移动；
 
-<font color='red'>这是byte类型运算；在计算机中，数值一律用补码来表示和存储</font>
+<font color='red'>这是byte类型运算；在计算机中，数值一律用补码来表示和存储；正数原码就是补码，负数就是补码先反码加1</font>
 
-    二进制原码-->二进制反码-->二进制补码【开始位运算】-->二进制反码-->二进制原码
-    正数(>>2：
+    二进制原码-->二进制反码-->二进制补码()【开始位运算】-->二进制反码-->二进制补码 -->二进制原码
+    正数>>2：
       正数的补码是本身，负数的补码是他的反码+1
       1. 其正数的补码 = 原码)：正数的补码 = 原码（不用加1）
      0001 0100(20)--> 0001 0100(20)--> 0000 0101(3)--> 0001 0100(20)--> 0001 0100(20)
     负数补码：
       1. {原码符号位不变} + {数值位按位取反后+1}
       2. {原码符号位不变} + {数值位从右边数第一个1及其右边的0保持不变,左边安位取反}
-    负数(>>2)：其右移过程中，负数补1，正数补0---位运算过后，二进制取反加1.得出二进制原码
+    负数>>2)：其右移过程中，负数补1，正数补0---位运算过后，二进制取反加1.得出二进制原码
+      -4>>2
+      原码：10000000 00000000 00000000 00000100
+      反码：                           11111011//负3 11111100
+      补码：11111111 11111111 11111111 11111100
+      右移：11111111 11111111 11111111 11111111 //位移后的补码
+      反码：10000000 00000000 00000000 00000000//加一后就是原码
+      变换后的原码：10000000 00000000 00000000 00000001//
+      ```
+      负数
+      二进制  原  反   补    >>2    反     原（反码加一）
+      1     0001 1110 1111  1111  0000  0001
+      10    0010 1101 1110  1111  0000  0001
+      11    0011 1100 1101  1111  0000  0001
+      100   0100 1011 1100  1111  0000  0001 1
+      101   0101 1010 1011  1110  0001  0010
+      110   0110 1001 1010  1110  0001  0010
+      111   0111 1000 1001  1110  0001  0010 
+      1000  1000 0111 1000  1110  0001  0010 2
+      1001  1001 0110 0111  1101  0010  0011 3
+      -1到-4>>2 为-1 -5到-8>>-2 2 -9是-3
+      ```
 
     负数:-2>>>31
       原码：10000000 00000000 00000000 00000010
