--- a/self_study/java/笔记.md
+++ b/self_study/java/笔记.md
@@ -58,7 +58,7 @@
       111   0111 1000 1001  1110  0001  0010 
       1000  1000 0111 1000  1110  0001  0010 2
       1001  1001 0110 0111  1101  0010  0011 3
-      -1到-4>>2 为-1 -5到-8>>-2 2 -9是-3
+      -1到-4>>2 为-1 -5到-8>>-2 2 -9到12是-3 -13到-16是-4 -17到-20是-5
       ```
 
     负数:-2>>>31
@@ -77,6 +77,7 @@
   >if语句 和 switch语句( switch(表达式){case c1：语句组 1；break; default: 语句组;break;} 【其中表达式：int类型 和 char类型】)
 - 循环语句：
   >for语句 ，while语句 和 do语句(do{ ------ } while();)
+- 跳转语句：标号，break，continue
 
 ### 简答题
 
@@ -86,7 +87,7 @@
   
   2.嵌套if语句，else对应规则：if和else的配对原则都是在同一个复合语句括号“{}”作用域内就近配对的原则。如果不属于同一个复合语句括号“{}”作用域内，则不会被配对。
   
-  3.do语句与while语句区别:l
+  3.do语句与while语句区别:
 
   >do首先执行循环体语句，然后判定条件表达式的值，值为真，重复执行循环体语句，直到表达式的值为假时结束循环。不论真假，do至少执行一次。  
   >while计算表达式的值，为真，重复执行循环体语句。为假时结束，条件表达式判断为假不执行循环体语句，一直为真，一直执行。
@@ -178,7 +179,7 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
   1. 运算符==判断的是：两个对象在内存的存储空间是否相同。
   2. 数组静态化：在数组声明的时候赋初始值。
   3. 数组的下标可以是整型常量和表达式。
-  4. int[] arr 存在于堆内存，new int[3] 存在于栈内存。new 出来的对象都有一个唯一的地址值，相当于把堆内存的地址值赋值给栈内存的的数组。
+  4. int[] arr 存在于栈内存，new int[3] 存在于堆内存。new 出来的对象都有一个唯一的地址值，相当于把堆内存的地址值赋值给栈内存的的数组。
 
 ## 第六章 继承与多态
 
@@ -201,7 +202,7 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
 
     普通类不能有抽象方法，实现类必须要完整的重写抽象类所有的方法。
     实现类！部分不重写的话子类只能也是抽象类。。直至。。。。所有抽象方法被全部重写为止。
-    接口不能实现接口可以继承，抽象类可以继承接口。  
+    接口与接口不能实现，接口可以继承，抽象类可以继承接口。接口可以多继承  
 
     java接口常量，抽象方法，构造方法(书上)
 - <font color="red">抽象类只实现接口中一个方法，继承抽象类的普通类也要实现全部</font>
