--- a/self_study/java/笔记.md
+++ b/self_study/java/笔记.md
@@ -216,7 +216,7 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
  1. 类A继承扩展B，子类a和父类b的关系是 is a关系
  2. 使用关键字final的类都是不能被扩展的类
  3. 接口所有变量的属性为public
- 4. 什么是多态：定义的引用变量，所指向的具体类型和 通过该引用变量发出的方法调用在编程时并不确定。重载一个方法名可以看作多态，由对象确定调用父类或者子类的那个方法。
+ 4. 什么是多态：定义的引用变量所指向的具体类型和 通过该引用变量调用的方法在编程时并不确定，由运行时决定。方法重载可以看作多态，由对象运行时调用父类或者子类的方法。
  5. 判断引用指向那个实例. e instanceof c如果对象e是对象c的实例就返回true.同名不同参数列表是重载，同名同参数列表是重写(覆盖)
  6. 接口不能new但是可以申明接口类型的变量用来指向具体的类实例进行操作
 
@@ -322,10 +322,13 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
 5. 流是个抽象的概念,是对输入输出设备的抽象
 6. 输入/输出流对应的是InputStream/OutputStream
 7. 读者和写者的作用是：实现了对不同平台之间数据流中的数据进行转换
+    InputStream 有 FileInputStream文件输入流,实现对文件的读取操作  FilterInputStream过滤器输入流   ObjectInputStream实现ObjectInput接口
+    FilterInputStream的子类有BufferedInputStream DataInputStream CheckedInputStream，
+    CharInputStream类是字符流不是FileInputStream的子类
 
 ## java swing
 
-- 顶层容器：JFrame,JApplet,JDialog,JWindow.
+- 顶层容器：JFrame,JApplet,JDialog,JWindow.面板Panel【Panel|pænl板平板】 都称为容器（Container所有容器的爸爸）
 
     顶层容器：JFrame（能独立运行）
     通过方法设置内容窗格：
