--- a/self_study/java/笔记.md
+++ b/self_study/java/笔记.md
@@ -216,7 +216,7 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
  1. 类A继承扩展B，子类a和父类b的关系是 is a关系
  2. 使用关键字final的类都是不能被扩展的类
  3. 接口所有变量的属性为public
- 4. 什么是多态：定义的引用变量所指向的具体类型和 通过该引用变量调用的方法在编程时并不确定，由运行时决定。方法重载可以看作多态，由对象运行时调用父类或者子类的方法。
+ 4. 什么是多态：定义的引用变量所指向的具体类型和 通过该引用变量调用的方法在编程时并不确定,而是在程序运行期间才确定。方法重载可以看作多态，由对象运行时调用父类或者子类的方法。
  5. 判断引用指向那个实例. e instanceof c如果对象e是对象c的实例就返回true.同名不同参数列表是重载，同名同参数列表是重写(覆盖)
  6. 接口不能new但是可以申明接口类型的变量用来指向具体的类实例进行操作
 
@@ -227,10 +227,10 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
 - io包提供了4个基本抽象类：<font color="red">InputStream , OutputStream ,Reader ,  Writer</font>
 - 输入数据流：
   1. int available()返回数据流中可读取的字节数(实际可能大于返回值).
-  2. int read()输入流读取一个字节的二进制数据。
+  2. int read()输入流读取一个字节的二进制数据。is.read(b)就读到指定字节长度的内容，而返回的是字节长度int
   3. int read(byte[] b , int off,int len)从输入流中读取长度为len的数据从数组小标为off处放置
   4. long skip(long l)跳过指定数量l不读取
-  5. void mark(int ma)标记数据流此时的位置，并划出缓冲区, void reset()将输入流定位到最后嗲用mark的地方【reset重置清零|riːdaɪˈrekt重定向adj再直接的】
+  5. void mark(int ma)标记数据流此时的位置，并划出缓冲区, void reset()将输入流定位到最后嗲用mark的地方【reset重置清零redirect|riːdaɪˈrekt重定向adj再直接的】
 - 输出字节流：
   1. void flush();刷新并强制写出所有缓冲的输出字节
   2. void write(int i)将字节i写入数据流
@@ -244,11 +244,13 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
     while(in.available > 0)
     System.out.print( in.read() +"");
     in.close();
+- FileOutputStream(string name,bolean append)使用name字符串创建一个新的文件输出流，如果append为true那就添加后面，不为true就删除重写
 
 ### 过滤器数据流filter(过滤器)
 
 - 也提供了对mark(),reset(),和skip()的支持,inputstream 和outputstream是抽象类，
-- 缓冲区数据流：BufferedInputStream 和 BufferedOutputStream 都属于过滤器数据流。  inputstream is = new bufferedinputstream(new fileinputstream("文件")，1024)1024是设置的缓冲区大小  实际用的是datainputstream data = new datainputstream()
+- 缓冲区数据流：BufferedInputStream 和 BufferedOutputStream 都属于过滤器数据流。  inputstream is = new bufferedinputstream(new fileinputstream("文件")，1024)1024是设置的缓冲区大小  实际用的是datainputstream data = new datainputstream(is)//对父类进行了扩展可以写入二进制
+- 单独的datainputstream(只能读取数字)
 
 - 数据数据流：DataInputStream 和 DataOutputStream 允许读写 Java基本类型（按类型读写）
   1. double readDouble()
@@ -279,7 +281,7 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
 - BufferedReader()
   1. String readLine();读一行
 - BufferdWriter()
-  1. void newLine()写入一行
+  1. void newLine()写入一行write是不换行
 
       都是先取文件路径作为管道
       FileInputStream f = new FileInputStream("路径")；
@@ -316,7 +318,7 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
 ### 简答题4
 
 1. 创建BufferedReader对象必须先建立了一个FileReader对象，这个对象的功能是从文件"file.txt"中读取字节(byte)流，并转换为文本流
-2. 随机读写字符文件的类是RandomAccessFile
+2. 随机读写字符文件的类是RandomAccessFile【Access|ˈækses通道访问，数据库】
 3. 读取字符流的抽象类是java.io.Reader
 4. 在字节流和字符流之间起中介作用，充当字节流与读者之间的接口的是InputStreamReader
 5. 流是个抽象的概念,是对输入输出设备的抽象
@@ -328,7 +330,7 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
 
 ## java swing
 
-- 顶层容器：JFrame,JApplet,JDialog,JWindow.面板Panel【Panel|pænl板平板】 都称为容器（Container所有容器的爸爸）
+- 顶层容器：JFrame,JApplet,JDialog,JWindow.面板Panel【Panel|pænl板平板】 都称为容器（Container所有容器的爸爸）【pane|peɪn窗格,面panel|ˈpænl仪表板座谈小组】
 
     顶层容器：JFrame（能独立运行）
     通过方法设置内容窗格：
