--- a/self_study/java/笔记.md
+++ b/self_study/java/笔记.md
@@ -342,6 +342,8 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
       frame.setContentPane(cp)
 
     不能独立运行的容器： 普通面板 Jpanel 和 滚动面板 JscrollPane
+    滚动面板方法
+      显示指定组件内容：JScrollPane(Component View)
       垂直滚动： void setVerticalScrollBarPolicy(int policy);
       水平滚动： void setHorizontalScrollBarPolicy(int policy)
       需要时可见：
@@ -351,10 +353,10 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
       可见：
         ScrollPaneConstants.VERTICAL_SCROLLBAR_AS_ALWAYS;
 
-    滚动条：
+    滚动条：AWT（中）
      Scrollbar(int orientation);构造一个具有新方向的滚动条
       Scrollbar(int orientation，int value(大小)，int visible（可视大小），
-    int minimum，int maximum);构造一个新的滚动条
+    int minimum，int maximum);构造一个新的滚动条 【orientation|ɔːriənˈteɪʃn方向；定向；适应】
 - 布局管理器：
   1. FlowLayout流式布局管理器（大小自动适应）</br>setLayout(new FlowLayout(FlowLAYOUT.RIGHT(右对齐，默认是左)))【jpanel默认】
      > FlowLayout(int align,int hgap,int vgap)指定对齐方式和水平及垂直间距。
