--- a/self_study/java/笔记.md
+++ b/self_study/java/笔记.md
@@ -344,12 +344,12 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
     不能独立运行的容器： 普通面板 Jpanel 和 滚动面板 JscrollPane
     滚动面板方法
       显示指定组件内容：JScrollPane(Component View)
-      垂直滚动： void setVerticalScrollBarPolicy(int policy);
+      垂直滚动： void setVerticalScrollBarPolicy(int policy);【Po li cy|pɒləsi政策方针】
       水平滚动： void setHorizontalScrollBarPolicy(int policy)
       需要时可见：
-        ScrollPaneConstants.VERTICAL_SCROLLBAR_AS_NEEDED;
+        ScrollPaneConstants.VERTICAL_SCROLLBAR_AS_NEEDED;【Constant|ˈkɒnstənt不变的常数】
       不可见：
-        ScrollPaneConstants.VERTICAL_SCROLLBAR_AS_NEVER;
+        ScrollPaneConstants.VERTICAL_SCROLLBAR_AS_NEVER;可以HORIZONTAL_SCROLLBAR_AS_NEEDED
       可见：
         ScrollPaneConstants.VERTICAL_SCROLLBAR_AS_ALWAYS;
 
@@ -363,7 +363,7 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
 
   2. BorderLayout边界布局管理器  
 
-  3. GridLayout网格布局管理器（和网格组件大小变化）
+  3. GridLayout网格布局管理器（和网格组件大小变化）【Grid|ɡrɪd网格输电网】
 
   4. CardLayout卡片布局管理器  
   myCard = new CardLayout();   contentPane.setLayout(myCard);  
